versao 0.1 correções ortográficas

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			<div class="container">
 				<p class="style1">Para quem quer expandir suas capacidades argumentativas em redações ENEM, nós somos:</p>
 				<p class="style2">
-				O seu mais novo centro educacional de redação ENEM a <a href="index.html" class="nobr"> PILULAS DA ARGUMENTAÇÃO</a>
+				O seu mais novo centro educacional de redação ENEM: a <a href="index.html" class="nobr"> PILULAS DA ARGUMENTAÇÃO</a>
 				</p>
-				<p class="style3"> É o local ideal para quem está procurando  <strong>fundamentação teórica</strong>, <strong> coesão</strong> e <strong>coerência</strong> para uma argumentação exemplar na redação ENEM. Seja por meio de uma correção criteriosa ou nível ENEM, temos sempre uma equipe ponta para pegar na sua mão e seguir lado a lado na preparação!</p>
+				<p class="style3"> É o local ideal para quem está procurando  <strong>fundamentação teórica</strong>, <strong> coesão</strong> e <strong>coerência</strong> para uma argumentação exemplar na redação ENEM. Seja por meio de uma correção criteriosa ou nível ENEM, temos sempre uma equipe pronta para pegar na sua mão e seguir lado a lado na preparação!</p>
 
 				<ul class="actions">
 				<li><a href="planos.html" class="button style3 large">Conheça nossos planos</a></li>
